After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754965 - end-session-dialog: not always get the focus
end-session-dialog: not always get the focus
Status: RESOLVED FIXED
Product: gnome-flashback
Classification: Other
Component: end-session-dialog
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Flashback Maintainers
GNOME Flashback Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-13 15:39 UTC by Balló György
Modified: 2015-09-14 00:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Balló György 2015-09-13 15:39:38 UTC
Steps to reproduce:
Open logout dialog from the User menu, and cancel it multiple times. Between them, select a desktop icon, or switch to an application. Usually, the dialog is opened in unfocused state, which makes it difficult to logout with keyboard.