end-session-dialog: use x11 server time when displaying dialog

https://bugzilla.gnome.org/show_bug.cgi?id=754965